apps/shared/authentik/Deployment-outpost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-outpost
  namespace: authentik
  labels:
    app: authentik-outpost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-outpost
  template:
    metadata:
      labels:
        app: authentik-outpost
    spec:
      containers:
        - name: outpost
          image: ghcr.io/goauthentik/outpost:2024.12.1
          ports:
            - containerPort: 9000
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      terminationGracePeriodSeconds: 60
