apps/shared/authentik/Deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  namespace: authentik
  labels:
    app: authentik-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: authentik-server
  template:
    metadata:
      labels:
        app: authentik-server
    spec:
      containers:
        - name: server
          image: ghcr.io/goauthentik/server:2024.12.1
          ports:
            - containerPort: 9000
              name: http
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
      terminationGracePeriodSeconds: 60
