apps/shared/authentik/Deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: authentik
  labels:
    app: authentik-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/goauthentik/server:2024.12.1
          command: ["python", "manage.py", "celery", "worker"]
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
      terminationGracePeriodSeconds: 60
