apps/shared/authentik/Service-outpost.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost
  namespace: authentik
spec:
  selector:
    app: authentik-outpost
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
