apps/shared/authentik/Service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: authentik
spec:
  selector:
    app: authentik-server
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
